--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,22 @@ services:
       - "8081:8081"
     depends_on:
       - mongo
+  course-management:
+    container_name: course-management-container
+    restart: always
+    build: ./Course-Management-Service
+    ports:
+      - "8082:8082"
+    depends_on:
+      - mongo
+  learner-management:
+    container_name: learner-management-container
+    restart: always
+    build: ./Learner-Management-Service
+    ports:
+      - "8085:8085"
+    depends_on:
+      - mongo
   mongo:
     container_name: mongo-backend
     image: mongo
