--- a/Payment-Service/package.json
+++ b/Payment-Service/package.json
@@ -15,8 +15,7 @@
     "express": "^4.19.2",
     "express-react-views": "^0.11.0",
     "nodemon": "^3.1.0",
-    "paypal-rest-sdk": "^1.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "paypal-rest-sdk": "^1.8.1"
+
   }
 }
